--- a/kooplexhub/education/templates/course_partial_list.html
+++ b/kooplexhub/education/templates/course_partial_list.html
@@ -27,7 +27,7 @@
   {% if ucb.is_teacher %}
     <a href="{% url 'education:configure' course.id %}" role="button" class="btn btn-secondary btn-sm" data-toggle="tooltip" title="Settings of course {{ course.name }}. You can change the image, modify description." data-placement="top"><span class="oi oi-wrench" aria-hidden="true"></span></a>
   {% else %}
-    <a href="{% url 'education:assignment_student' ucb.id %}" role="button" class="btn btn-secondary btn-sm" data-toggle="tooltip" title="{{ tooltip }}" data-placement="top"><span class="oi oi-pencil" aria-hidden="true"></span></a>
+    <a href="{% url 'education:assignment_student' %}" role="button" class="btn btn-secondary btn-sm" data-toggle="tooltip" title="{{ tooltip }}" data-placement="top"><span class="oi oi-pencil" aria-hidden="true"></span></a>
   {% endif %}
   </div>
 </div>
@@ -52,7 +52,7 @@
         {% if ucb.is_teacher %}
           <a href="{% url 'education:configure' course.id %}" role="button" class="btn btn-secondary btn-sm" data-toggle="tooltip" title="Settings of course {{ course.name }}. You can change the image, modify description." data-placement="top"><span class="oi oi-wrench" aria-hidden="true"></span></a>
         {% else %}
-          <a href="{% url 'education:assignment_student' ucb.id %}" role="button" class="btn btn-secondary btn-sm" data-toggle="tooltip" title="{{ tooltip }}" data-placement="top"><span class="oi oi-pencil" aria-hidden="true"></span></a>
+          <a href="{% url 'education:assignment_student' %}" role="button" class="btn btn-secondary btn-sm" data-toggle="tooltip" title="{{ tooltip }}" data-placement="top"><span class="oi oi-pencil" aria-hidden="true"></span></a>
         {% endif %}
       </div>
     </div>
