--- a/kooplexhub/volume/templates/attachment_new.html
+++ b/kooplexhub/volume/templates/attachment_new.html
@@ -4,15 +4,13 @@
 {% load extras %}
 
 {% block bodycontent %}
-<div class="container" style="overflow-x:hidden;">
-  <form id="attachment_new" class="form-horizontal was-validated card bg-light border-secondary shadow p-3" action="{% url 'volume:new_attachment' %}" method="post">
-    {% csrf_token %}
-    {% title "Create a new attachment" %}
-    <table>
-       {{ form.as_table }}
-    </table>
-    {% apply_cancel label_apply="Create" icon_apply="bi bi-check-circle-fill" color_apply="btn-success" %}
-  </form>
-</div>
+<form id="attachment_new" class="was-validated bg-light border-secondary shadow p-3 container rounded" action="{% url 'volume:new_attachment' %}" method="post">
+  {% csrf_token %}
+  {% title "Create a new attachment" %}
+  <table>
+     {{ form.as_table }}
+  </table>
+  {% apply_cancel label_apply="Create" icon_apply="bi bi-check-circle-fill" color_apply="btn-success" %}
+</form>
 {% endblock %}
 
