--- a/kooplexhub/report/templates/reporthelp.html
+++ b/kooplexhub/report/templates/reporthelp.html
@@ -33,6 +33,7 @@ left: 0;
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
   </div>
   <div class="carousel-inner">
   <div>
@@ -53,7 +54,7 @@ left: 0;
       <div class="container-fluid">
         <img class="w-100" src="/static/printreport_hdropdown.png" alt="report help">
       </div>
-              </div>
+    </div>
     <div class="carousel-item">
       <p>New report: Create a new report.
         Project: associate the report to a project
@@ -68,7 +69,13 @@ left: 0;
         <div class="container-fluid">
           <img class="w-100" src="/static/printreport_hnew.png" alt="report help">
         </div>
-              </div>
+    </div>
+    <div class="carousel-item">
+	    <p>For every non-static reporttypes, such as shiny, plotly etc a separate environment is prepared, which can be accessed under <a href="/hub/container_environment/reportclist/">List report environments </a>. </p>
+      <div class="container-fluid">
+        <img class="w-100" src="/static/printreport_hdropdown.png" alt="report help">
+      </div>
+    </div>
   </div>
 </div>
 </div>
@@ -84,6 +91,6 @@ left: 0;
   </div>
 
 
-  <a class="btn btn-dark"  data-toggle="tooltip" title="Help" data-placement="bottom" data-bs-toggle="modal" href="#exampleModalToggle" role="button"><span class="oi oi-question-mark"></a>  
+  <a class="btn btn-dark" data-toggle="tooltip" title="Help" data-placement="bottom" data-bs-toggle="modal" href="#exampleModalToggle" role="button"><span class="oi oi-question-mark"></a>  
 
 
