--- a/kooplexhub/container/templates/container_partial_list.html
+++ b/kooplexhub/container/templates/container_partial_list.html
@@ -43,7 +43,7 @@
       {% container_restart_reason container %}
     </p>
   </div>
-  <div class="card-footer bg-secondary bg-opacity-35 border-bottom border-warning border-1 border-opacity-50i d-none" id="buttonbar-{{ container.id }}">
+  <div class="card-footer bg-secondary bg-opacity-35 border-bottom border-warning border-1 border-opacity-50i opacity-25" id="buttonbar-{{ container.id }}">
     <div class="container-fluid">
       <div class="d-flex flex-row justify-content-between">
         <div class="d-flex flex-row justify-content-start">
